--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ img.showroomphoto {
 }
 .style {
 	background: none;
-	color: #f6f6f6;
+	color: #1d1d1d;
 	border: none;
 	border-radius: 12px;
 	margin: 2%;
