--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,10 @@ img.logo {
 	width: 100%;
 	text-transform: uppercase;
 }
+.form
+{
+	display: grid;
+}
 .photo {
 	height: 1000px;
 	width: 100%;
@@ -109,23 +113,31 @@ img.showroomphoto {
 	font-size: 226%;
 }
 .input {
-	display: inline;
-	margin-top: 10%;
-
+	display:grid;
+	grid-template-rows: 30% 30% 30%;
+	margin-top: 2%;
+  text-align: left;
+	position: relative;
+	left:6%;
 	width: 100%;
 }
 .style {
 	background: none;
 	color: #1d1d1d;
-	border: none;
-	border-radius: 12px;
+	border:none;
 	margin: 3%;
 	inline-size: 40%;
 	height:32px;
 	padding: 2%;
 	font-family: "Poppins";
 	font-size: 16pt;
-	border: solid 0.08em #959397;
+	border-bottom: solid 0.08em #959397;
+}
+::placeholder
+{
+	color:#959397;
+	display: flex;
+	font-size: 1.2rem;
 }
 .name {
 	padding: 0.6%;
@@ -146,8 +158,13 @@ img.showroomphoto {
 	width: 50%;
 	margin-top: 2.4%;
 }
+.container{
+	text-align: center;
+	height: 900px;
+}
 .btn-container {
-	margin-left: 1.2%;
+	position: relative;
+	left:4%;
 	width: 400px;
 	margin-top: 2%;
 }
@@ -164,8 +181,9 @@ img.showroomphoto {
 	padding: 2%;
 	width: 100%;
 	height: 60px;
-	top: 200px;
-	left: 0%;
+	position: relative;
+	
+	left: 82%;
 	margin-top: 2%;
 	border-radius: 12px;
 }
@@ -227,6 +245,7 @@ text-align: center;}
 	position: relative;
 	top:32px;
 	left:48px;
+	display: grid;
 	
 }
 
